# pico-projects

./: README.md
blink/: CMakeLists.txt  README.md
blink-baremetal/: main.c
blink/src/: main.c  main.h  main.s
